--- a/source/style/styles.css
+++ b/source/style/styles.css
@@ -11,6 +11,10 @@
     text-shadow: 1px 1px rgba(255, 71, 71, 0.342);
 }
 
+body {
+    background-color: rgb(17, 17, 17);
+}
+
 #container {
     display: grid;
     place-content: center;
@@ -18,7 +22,7 @@
     width: 100%;
     height: 100%;
 
-    background-color: rgb(17, 17, 17);
+    margin-bottom: 50px;
 }
 
 #buttons {
@@ -36,6 +40,7 @@
     background-color: rgba(255, 71, 71, 0.068);
     border: 2px solid rgb(255, 71, 71);
     text-decoration: none;
+    border-radius: 5px;
     transition: 0.5s;
 }
 
