--- a/source/style/team.css
+++ b/source/style/team.css
@@ -68,7 +68,8 @@ body {
     background-color: rgba(255, 71, 71, 0.205);
     border: 1px solid rgb(255, 71, 71);
     padding: 1px 7px 1px 7px;
-    margin: 10px 5px 0px 0px;
+    margin: 5px;
+    margin-left: 0px;
 }
 
 #main-page-link {
